# flamewasm

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE-APACHE  LICENSE-MIT  QUICK_DEPLOY.md  README.md  SECURITY.md  jsondata.json  setup.bat  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
backend/: package-lock.json  package.json  server.js  server.js.example
backend/scripts/: seedDatabase.js
benches/: compile_bench.rs  execution_bench.rs  memory_bench.rs
crates/flame-cli/: Cargo.toml
crates/flame-cli/src/: main.rs
crates/flame-core/: Cargo.toml
crates/flame-core/src/: error.rs  ir.rs  lib.rs  parser.rs  validator.rs
crates/flame-cranelift/: Cargo.toml
crates/flame-cranelift/src/: compiled_module.rs  compiler.rs  func_translator.rs  lib.rs  memory.rs  trampoline.rs
crates/flame-runtime/: Cargo.toml
crates/flame-runtime/src/: global.rs  imports.rs  instance.rs  lib.rs  memory.rs  table.rs  trap.rs  val.rs
crates/flame-sandbox/: Cargo.toml
crates/flame-sandbox/src/: capability.rs  enforcer.rs  lib.rs  policy.rs
crates/flame-spec-tests/: Cargo.toml
crates/flame-spec-tests/fixtures/: br.wast  f32.wast  f64.wast  hello.wat  i32.wast  i64.wast  memory.wast
crates/flame-spec-tests/src/: main.rs
crates/flame-wasi/: Cargo.toml
crates/flame-wasi/src/: clock.rs  ctx.rs  env.rs  fd.rs  lib.rs  path.rs  proc.rs  random.rs
docs/: architecture.md  sandboxing.md
frontend/: netlify.toml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Dashboard.js  Filters.js  StatsCards.js
frontend/src/components/charts/: CityChart.js  CountryChart.js  IntensityChart.js  LikelihoodChart.js  RegionChart.js  RelevanceChart.js  TopicsChart.js  YearChart.js
scripts/: build-examples.sh  fetch-spec-tests.ps1  fetch-spec-tests.sh
tests/fixtures/: fib.wat  hello.wat  memory_ops.wat  trap_oob.wat
tests/integration/: cli_tests.rs  sandbox_policy.rs
tools/flame-objdump/: Cargo.toml
tools/flame-objdump/src/: main.rs
tools/flame-profiler/: Cargo.toml
tools/flame-profiler/src/: main.rs
tools/wast2json/: Cargo.toml
tools/wast2json/src/: main.rs
