[package]
name        = "flame-cli"
description = "FlameWasm command-line interface"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "flamewasm"
path = "src/main.rs"

[dependencies]
flame-core      = { path = "../flame-core" }
flame-cranelift = { path = "../flame-cranelift" }
flame-runtime   = { path = "../flame-runtime" }
flame-wasi      = { path = "../flame-wasi" }
flame-sandbox   = { path = "../flame-sandbox" }
clap            = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
