[package]
name        = "flame-core"
description = "WebAssembly binary parser, IR, and spec-compliant validator"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
wasmparser  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }

[dev-dependencies]
wat = { workspace = true }
