[package]
name        = "flame-sandbox"
description = "Capability-based security sandbox for FlameWasm"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
flame-wasi  = { path = "../flame-wasi" }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
