[package]
name        = "flame-profiler"
description = "Emit JIT code-region annotations for perf/samply profilers"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[[bin]]
name = "flame-profiler"
path = "src/main.rs"

[dependencies]
flame-core       = { path = "../../crates/flame-core" }
flame-cranelift  = { path = "../../crates/flame-cranelift" }
clap             = { workspace = true }
anyhow           = { workspace = true }
